# cookiecutter-python-package

./: README.md  cookiecutter.json  extensions.py
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg
{{ cookiecutter.project_slug }}/.github/workflows/: publish.yml
{{ cookiecutter.project_slug }}/docs/: index.md
{{ cookiecutter.project_slug }}/docs/extra/: stylesheet.css
{{ cookiecutter.project_slug }}/tests/: conftest.py
