[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_package }}.__version__
description = {{ cookiecutter.project_description }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
url = https://github.com/{{ cookiecutter.__github_repository }}
long_description = file: README.md
long_description_content_type = text/markdown
{%- if cookiecutter.keywords.strip() %}
keywords =
{%- for keyword in cookiecutter.keywords.strip().split(",") %}
    {{ keyword.strip() }}
{%- endfor %}
{%- endif %}
license = {{ cookiecutter.license }}
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    {% if cookiecutter.license == "MIT" -%}
    License :: OSI Approved :: MIT License
    {% elif cookiecutter.license == "BSD" -%}
    License :: OSI Approved :: BSD   License
    {% endif -%}
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    typing-extensions
python_requires = >={{ cookiecutter.python_requires }}
packages = find:

[options.extras_require]
tests =
    pytest
docs =
    black
    griffe-generics
    griffe-modernized-annotations
    mkdocs
    mkdocs-material
    mkdocstrings[python]
dev =
    %(tests)s
    %(docs)s
    mypy
    rich
    ruff